--- a/other/performancetest/pom.xml
+++ b/other/performancetest/pom.xml
@@ -54,7 +54,7 @@
                     <!-- MainClass in mainfest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>org.xcolab.utilities.CrossRegisterUsersVoted</mainClass>
+                            <mainClass>org.xcolab.performance.Main</mainClass>
                         </manifest>
                     </archive>
 
